overflow content fixes

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -142,7 +142,8 @@
     padding-left: 124px;
 
     @include m.vp-1200 {
-      padding-left: 133px;
+      margin: 0 auto 0;
+      padding-left: 90px;
       padding-bottom: 62px;
     }
 
@@ -172,7 +173,7 @@
     list-style-type: none;
 
     @include m.vp-1200 {
-      grid-template-columns: repeat(2, minmax(10px, auto));
+      grid-template-columns: minmax(10px, 51%) minmax(10px, auto);
       margin-top: 32px;
     }
 
