--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -56,6 +56,7 @@
       grid-template-columns: repeat(2, minmax(10px, 1fr));
       column-gap: 30px;
       margin-top: 43px;
+      max-width: 768px;
     }
 
     @include m.vp-767 {
