--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,10 +11,10 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 37px 104px;
+    padding: 37px 104px 30px;
 
     @include m.vp-1200 {
-      padding: 40px 45px;
+      padding: 39px 45px 33px;
     }
 
     @include m.vp-767 {
@@ -62,16 +62,19 @@
   &__nav-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 10px 30px;
 
     list-style-type: none;
     transform: translate(3px, -4px);
+
     margin: 0;
     padding: 0;
+    max-width: 500px;
 
     @include m.vp-1200 {
+      gap: 10px 20px;
       transform: translate(6px, -4px);
-      gap: 20px;
+      max-width: 420px;
     }
 
     @include m.vp-767 {
@@ -82,7 +85,9 @@
     }
 
     li:not(:first-child) {
-      margin-top: 15px;
+      @include m.vp-767 {
+        margin-top: 15px;
+      }
     }
 
     li:first-child {
@@ -117,6 +122,11 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    max-width: 210px;
+
+    @include m.vp-1200 {
+      max-width: 150px;
+    }
 
     @include m.vp-767 {
       margin-top: 19px;
