--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -9,7 +9,6 @@
   &__container {
     display: grid;
     grid-template-columns: minmax(10px, 500px) minmax(10px, 660px);
-    grid-template-rows: 500px;
 
     padding-top: 120px;
     padding-bottom: 50px;
@@ -68,6 +67,10 @@
 
     @include m.vp-1200 {
       padding: 47px 45px 50px;
+    }
+
+    @include m.vp-767 {
+      justify-items: center;
     }
 
     @include m.vp-319 {
@@ -212,11 +215,7 @@
   }
 
   &__img img {
-    height: 500px;
-
-    @include m.vp-1200 {
-      height: 292px;
-    }
+    height: 100%;
 
     @include m.vp-767 {
       height: auto;
